--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc mocha ./test/* --exit",
+    "test": "mocha ./test/* --exit",
     "fix-lint": "eslint . --fix"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "3.0.9",
     "eslint": ">=6.7.2",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "2.18.2",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1"
+    "mocha": "^6.2.2"
   },
   "keywords": [
     "rwanda",
